add recent conversations UI

--- a/faq.html
+++ b/faq.html
@@ -205,10 +205,11 @@ ul li {
    <div class='innerText'><br/><b>Main user UI:</b></div>
    <div class='innerText'>Use slide left/right gesture on the main menu to access to the following pages i.e.:</div>
    <div class='innerText'>
-     <image src="./img/atalk_web_intf.png" align="right" width="23%" style="margin:5px 0px 20px 15px"/>
-     <image src="./img/atalk_call_log.png" align="right" width="23%" style="margin:5px 0px 20px 15px"/>
-     <image src="./img/atalk_muc_bookmark_row.png" align="right" width="23%" style="margin:5px 0px 20px 15px"/>   
-     <image src="./img/atalk_contact_list.png" align="right" width="23%" style="margin:5px 0px 20px 15px"/><br>
+     <image src="./img/atalk_contact_list.png" align="inline" width="19%" style="margin:5px 0px 20px 2px"/>
+     <image src="./img/atalk_muc_bookmark_row.png" align="inline" width="19%" style="margin:5px 0px 20px 2px"/>   
+     <image src="./img/atalk_sessions.png" align="inline" width="19%" style="margin:5px 0px 20px 2px"/>
+     <image src="./img/atalk_call_log.png" align="inline" width="19%" style="margin:5px 0px 20px 2px"/>
+     <image src="./img/atalk_web_intf.png" align="inline" width="19%" style="margin:5px 0px 20px 2px"/>
    </div>
 
    <div class='innerText'><b>Chat Sessions ViewPager:</b></div>
