Privacy Policy update

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <li><a href="./faq.html#account_04">In-Band Registration</a> with Captcha option support</li>
       <li>Multiple accounts creation</li>
       <li>User selectable Themes support</li>
-      <li>Multi-language UI support (Bahasa Indonesia, English, German, Russian, and Spanish).</li>
+      <li>Multi-language UI support (Bahasa Indonesia, English, German, Portugese, Russian, and Spanish).</li>
       <li><a href="./faq.html">Online help support</a></li>
 	</ul>
 	</div>
