--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -117,14 +117,40 @@
 	   'Personally Identifiable Information' (PII) is being used. PII, as described in US privacy law and information
 	   security, is information that can be used on its own or with other information to identify, contact, or locate
 	   a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear
-		understanding of how we collect, use, protect or otherwise handle your personally Identifiable Information
-		in accordance with our website or app.
+		 understanding of how we collect, use, protect or otherwise handle your personally Identifiable Information
+		 in accordance with our website or app.
 	</div>
-	<span id='infoCo'></span>
 
-	<div class='grayText'>What personal information do we collect from the people that visit our blog, website or app?</div>
-	<div class='innerText'>We do not collect information from visitors of our site; or other personal details to
-	   help you with your experience.</div>
+	<span id='infoCo'></span>
+	<div class='grayText'>What personal information do we collect from the people use the app or visit our website?</div>
+	
+  <div class='innerText'>aTalk is an XMPP client that connects to an XMPP server. aTalk will never upload data to the
+		 developer. The only exception to this rule is data collected after a crash. This data will be send via the 
+		 developer email account, but never without your explicit consent.<div>
+     
+ <div class='innerText'>aTalk or its developers don’t have control over the data you send through the app. However the
+   following data might get uploaded to your XMPP provider:</div>  
+   <b><br/>Data uploaded to your XMPP provider</b>
+   <ul>
+			<li>Messages. This includes text messages, images and other files</li>
+			<li>Your avatar / profile picture</li>
+			<li>Your public keys for the OMEMO encryption</li>
+	 </ul>	
+	
+   <b>What does not get uploaded</b>
+   <ul>
+			<li>Your contacts. aTalk only asks permissions to read your contact to show the profile pictures and names of
+			  the corresponding XMPP contacts. Your contacts are never published anywhere. If you opt-out of this permission
+			  aTalk will work just fine.</li>
+	 </ul>	
+
+	<div class='innerText'><b>aTalk website access:<br/></b>
+  <ul>
+			<li>aTalk website provides aTalk's features detailed descriptions, and online help on the use of aTalk app.<br/>
+  	  We do not collect information from visitors to our site; or any other personal details to help you with your
+  	   experience.</li>
+ 	</ul>
+ 	</div>
 
 	<div class='grayText'>When do we collect information?</div>
 	<div class='innerText'>We collect information from you when you provide and enter information on our site,
@@ -133,37 +159,33 @@
 			<li>Provide us with feedback on our products or services</li>
 		</ul>	
 	</div>
-	<span id='infoUs'></span>
 
+	<span id='infoUs'></span>
 	<div class='grayText'>How do we use your information?</div>
 	<div class='innerText'>
-		We may use the information we collect from you when you register, make
-		a purchase, sign up for our newsletter, respond to a survey or
-		marketing communication, surf the website, or use certain other site
-		features in the following ways:
+		We may use the information we received from you via email; or collect from you when you register, respond to a
+		survey or surf the website, or use certain other site features in the following ways:
 		<ul>
 			<li>To allow us to better service you in responding to your customer service requests.</li>
+			<li>The information is used strictly for the purpose of analysing and solving issues, that users are experiencing.</li>
 			<li>We do not keep records of your name or email address, or any files containing those information.</li>
-			<li>The information is used strictly for the purpose of analyzing and solving issues that users are
-			   experiencing.</li>
 			<li>We will never use the information for marketing purpose or provide your information to third parties.</li>
 		</ul>	
 	</div>
+
 	<span id='infoPro'></span>
-
 	<div class='grayText'>How do we protect your information?</div>
-	<div class='innerText'>We do not use vulnerability scanning and/or scanning to PCI standards.</div>
-	<div class='innerText'>We only provide articles and information. We never ask for credit card numbers.</div>
-	<div class='innerText'>We use regular Malware Scanning.</div>
-
-	<div class='innerText'>We do not use an SSL certificate:
+	<div class='innerText'>
 		<ul>
+      <li>We do not use vulnerability scanning and/or scanning to PCI standards.</li>
 			<li>We only provide articles and information. We never ask for personal or private information like names,
 			   email addresses, or credit card numbers.</li>
+      <li>We use regular Malware Scanning.</li>
+      <li>The site uses SSL certificate for secure communications.</li>
 		</ul>
 	</div>
+	
 	<span id='coUs'></span>
-
 	<div class='grayText'>Do we use 'cookies'?</div>
 	<div class='innerText'>We do not use cookies for tracking purposes</div>
 	<div class='innerText'>You can choose to have your computer warn you each time a cookie is being sent, or you
