--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="cmeng" >
 	<meta name="description" content="Sublime Stunning free HTML5/CSS3 website template"/>
-	<link rel="icon" type="image/png" href="img/ic_hymnchtv.png">
+	<link rel="icon" type="image/png" href="img/hymnchtv.png">
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">
 	<link rel="stylesheet" type="text/css" href="./css/fancybox-thumbs.css">
 	<link rel="stylesheet" type="text/css" href="./css/fancybox-buttons.css">
@@ -44,7 +44,7 @@
 		<div class="shadow">
 			<p align="center">
           <a href="https://github.com/cmeng-git/hymnchtv">
-            <img src="img/ic_hymnchtv.png"  alt="HymnchTv" align="inline" width="8%" style="margin:5px 30px 20px 0px"/>
+            <img src="img/hymnchtv.png" alt="HymnchTv" align="inline" width="8%" style="margin:5px 30px 20px 0px"/>
           </a>
 			    <a href="https://play.google.com/store/apps/details?id=org.cog.hymnchtv&hl=en">
             <img src="img/google_play.png" alt="Google PlayStore" align="inline" width="20%" style="margin:5px 30px 20px 0px"/>
@@ -63,18 +63,18 @@
     <ul>
       <li>使用最新的 Android Fragment Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，和"拼音索引"</li>
-      <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
-      <li>手机横向模式时，乐谱和歌词文本，显示自动加大150%，易于阅读</li>
-      <li>开发新的媒体播放器用户界面。给用户最大的控制权</li>
-      <li>媒体播放类别：midi，伴奏，教唱，唱诗</li>
-      <li>可调媒体播放速度：0.7x〜1.3x，和重复播放</li>
-      <li>网络媒体下载仅一次；内部存储，供以后播放</li>
-      <li>媒体和播放同步于用户新选诗歌编号，无需返回主页</li>
-      <li>媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
-      <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
       <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
       <li>最大搜索增加到100项，显示匹配结果的4行完整诗词句</li>
       <li>长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
+      <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
+      <li>手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，显示自动加大150%，易于阅读</li>
+      <li>开发新的媒体播放器用户界面。给用户最大的控制权</li>
+      <li>媒体播放类别：midi，伴奏，教唱，唱诗</li>
+      <li>可调媒体播放速度：0.7x〜1.3x；和可选重复次数播放</li>
+      <li>网络媒体下载仅一次；内部存储，供以后播放</li>
+      <li>媒体播放同步于用户新选诗歌编号，无需返回主页</li>
+      <li>诗歌媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
+      <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
       <li>用户可选的主界面背景图片，字体大小和字体颜色</li>
       <li>自动检查版本更新，并通知用户任何新的更新以采取措施</li>   
 	</ul>
